--- a/projeto/index.html
+++ b/projeto/index.html
@@ -26,6 +26,6 @@
         </section>
         <img src="imagem2.png" alt="selfie de Marcelo Hideo">
     </main>
-    <footer></footer>
+    <footer>Desenvolvido por Marcelo Hideo </footer>
 </body>
 </html>
